chore: Adicionando comunicação com o serviço do MinIO(#209)