@@ -9,6 +9,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Component
 public class PessoaEntityMapperHelper {
@@ -38,7 +39,8 @@ public class PessoaEntityMapperHelper {
 
     public  <T, R> List<R> mapList(List<T> source, Function<T, R> mapper) {
         if (source == null) return List.of();
-        return source.stream().map(mapper).toList();
+        return source.stream().map(mapper).collect(Collectors.toList());
+
     }
 
     public List<ContatoEntity> mapContatos(PessoaRequest request, PessoaEntity pessoaEntity) {
